# team-metrics

./: .env.example  .gitignore  README.md  claude.md  postman_collection.json  pyproject.toml  requirements.txt
.claude/: launch.json
app/: __init__.py  auth.py  cache.py  exceptions.py  main.py  rate_limit.py  settings.py
app/adapters/: __init__.py  azure_devops.py
app/api/: cache.py  dashboard.py  dora.py  helpers.py  kpi.py  report.py  teams.py
app/config/: __init__.py  dora.yaml  dora_loader.py  kpi_loader.py  kpis.yaml  loader.py  team_loader.py  teams.yaml
app/schemas/: __init__.py  common.py  dora.py  kpi.py  report.py  snapshot.py
app/services/: common.py  dora_service.py  kpi_service.py  report_service.py  snapshot_service.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/api/: client.js
frontend/src/context/: PeriodContext.jsx
frontend/src/hooks/: usePageMeta.js
frontend/src/lib/: constants.js  formatters.js
frontend/src/pages/: CrossDevelopersPage.jsx  CrossPerformancePage.jsx  CrossPersonAnalysisPage.jsx  CrossQAPage.jsx  DeveloperAnalysisPage.jsx  DoraHealthPage.jsx  KpiDetailPage.jsx  OverviewPage.jsx  PerformanceAnalysisPage.jsx  PersonDetailPage.jsx  TeamPage.jsx  WorkItemDetailPage.jsx  WorkItemsPage.jsx
resources/: postman_collection.json
tasks/: architecture-review-v2.md  architecture-review.md  code-review.md  todo.md
tests/: conftest.py  test_cache.py  test_dora_service.py  test_endpoints.py  test_kpi_service.py  test_report_service.py
(+43 files in other folders)
